# agglomerator

./: CMakeLists.txt  README.md  Tools.cpp  Tools.h
Mesh/: cube.geo  cube.msh
python/: gmsh_control.py  graham_scan.py  main.py  test.vtk
